package com.example.MoedaEstudantil.Entities;



public enum Tipo {
    RECEBIMENTO, TROCA
}
